Fri May 25 11:14:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Connection_Handler.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Endpoint.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connection_Handler.h:
        * orbsvcs/orbsvcs/PortableGroup/PortableGroup_Acceptor_Registry.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_GenericFactory.h:
        * tao/DynamicAny/DynValue_i.h:
        * tao/DynamicAny/DynValueBox_i.h:
        * tao/DynamicAny/DynValueCommon_i.h:
        * tao/ZIOP/ZIOP_Policy_i.h:
        Doxygen warnings comment tidy-up.

Thu May 24 14:31:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/GIOP_Message_Base.cpp:
        * tao/ZIOP/ZIOP.cpp:
        * tao/ZIOP/ZIOP_ORBInitializer.cpp:
        * tao/ZIOP/ZIOP_Stub.cpp:
        Minor re-wording and addition of error messages to help pin-point ZIOP miss-configuration problems.

Mon May 21 14:15:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * docs/dynany/index.html:
        Missed updating this document with changes of Wed Feb 29 16:30:00 UTC 2012.
        DynamicAny Value and BoxedValue types are implimented.

Sat May 19 14:28:57 CEST 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.1.2 released.

Thu May 17 18:35:22 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * NEWS:
          Updates for 2.1.2

Thu May 17 08:13:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/RTCORBA/Activity/Task_Stats.cpp:
          Fixed conversion warning

Wed May 16 14:05:33 UTC 2012  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
        * TAO_IDL/be/be_visitor_component_scope.cpp:
          Changed DOxygen documentation.

Wed May 16 06:42:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
