@@ -1,6 +1,10 @@
 USER VISIBLE CHANGES BETWEEN TAO-2.1.2 and TAO-2.1.3
 ====================================================
 
+. Added OpenSSL configuration options SSLCipherList and
+  SSLServerCipherOrder to SSLIOP_Factory.  Allows SSL/TLS BEAST
+  exploit to be mitigated.
+
 USER VISIBLE CHANGES BETWEEN TAO-2.1.1 and TAO-2.1.2
 ====================================================
 
